移除Lazy Val警告提示